--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.r2dbc.username=${MARIADB_USER}
 spring.r2dbc.password=${MARIADB_PASSWORD}
 
 logging.level.org.springframework.r2dbc=debug
+
+jwt.secret=${JWT_SECRET}
+jwt.time.access=${JWT_ACCESS_TIME}
+jwt.time.refresh=${JWT_REFRESH_TIME}
