update: url prefix 수정에 따른 security 설정 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=echo
 
+spring.webflux.base-path=api
+
 spring.r2dbc.url=${MARIADB_URL}
 spring.r2dbc.username=${MARIADB_USER}
 spring.r2dbc.password=${MARIADB_PASSWORD}
@@ -9,3 +11,4 @@ logging.level.org.springframework.r2dbc=debug
 jwt.secret=${JWT_SECRET}
 jwt.time.access=${JWT_ACCESS_TIME}
 jwt.time.refresh=${JWT_REFRESH_TIME}
+
