--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ jwt.secret=${JWT_SECRET}
 jwt.time.access=${JWT_ACCESS_TIME}
 jwt.time.refresh=${JWT_REFRESH_TIME}
 
+spring.mail.username=${MAIL_USER}
+spring.mail.password=${MAIL_PASSWORD}
+
