--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ jwt.time.refresh=${JWT_REFRESH_TIME}
 spring.mail.username=${MAIL_USER}
 spring.mail.password=${MAIL_PASSWORD}
 
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+
+#logging.level.root=debug
