--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
     runtimeOnly 'org.mariadb:r2dbc-mariadb'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 
     // WebFlux
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
