infra: textchat-db
- PR 요청 후 수정사항 발생에 따른 추가 푸쉬
- properties value 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.r2dbc.password=${MARIADB_PASSWORD}
 
 logging.level.org.springframework.r2dbc=debug
 
-spring.data.mongodb.uri=${MONGODB_LOCAL_URL}
+spring.data.mongodb.uri=${MONGODB_URL}
 spring.data.mongodb.database=${MONGODB_DATABASE}
 spring.data.mongodb.port=${MONGODB_PORT}
 spring.data.mongodb.host=${MONGODB_HOST}
