--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - 27017:27017
     volumes:
       - ~/mongodb:/data/db
+      - ./mongo-init-script.sh:/docker-entrypoint-initdb.d/script.sh
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=1234
