--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
 
 #logging.level.root=debug
+
+kakao.client-id=${KAKAO_CLIENT_ID}
+kakao.redirect-uri=${KAKAO_REDIRECT_URI}
+kakao.token-url=${KAKAO_TOKEN_URL}
