--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     runtimeOnly 'org.mariadb:r2dbc-mariadb'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     // WebFlux
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
