--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,6 @@ spring.mail.password=${MAIL_PASSWORD}
 
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.uri=${REDIS_URI}
 
 #logging.level.root=debug
