--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -22,6 +22,9 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew  # gradlew에 실행 권한을 부여
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3.4.2
 
