feat/S3 - AWS S3 업로드/다운로드 구현 - S3는 공용기능으로 각 도메인에서 호출할 수 있도록 구현 - 저장, 삭제, 조회 메서드 구현 후 필요한 도메인에서 호출하여 사용 - 적용예제는 TextController 참조

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,14 @@ spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
 spring.data.redis.uri=${REDIS_URI}
 
+aws.credentials.accessKey=${AWS_CREDENTIALS_ACCESSKEY}
+aws.credentials.secretKey=${AWS_CREDENTIALS_SECRETKEY}
+aws.s3.bucket.name=${AWS_S3_BUCKET_NAME}
+aws.s3.region=ap-northeast-2
+aws.s3.upload.part.min.size=5242880
+aws.s3.upload.max.size=20971520
+#aws.s3.endpoint=http://localhost:4566/
+
 #logging.level.root=debug
 
 kakao.client-id=${KAKAO_CLIENT_ID}
