fix: exception 클래스가 계속 생성되는 이슈 해결

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.r2dbc.url=${MARIADB_URL}
 spring.r2dbc.username=${MARIADB_USER}
 spring.r2dbc.password=${MARIADB_PASSWORD}
 
-logging.level.org.springframework.r2dbc=debug
+#logging.level.org.springframework.r2dbc=debug
 
 spring.data.mongodb.uri=${MONGODB_URL}
 
