--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,5 @@ aws.s3.upload.max.size=20971520
 kakao.client-id=${KAKAO_CLIENT_ID}
 kakao.redirect-uri=${KAKAO_REDIRECT_URI}
 kakao.token-url=${KAKAO_TOKEN_URL}
+
+management.endpoints.web.exposure.include=prometheus, health, info
